Fix renderIn animation for clouds on Safari (#10)
* Fix renderIn animation for clouds on Safari

* Fix codacy issues

--- a/src/scss/_Fog.scss
+++ b/src/scss/_Fog.scss
@@ -4,11 +4,10 @@
   &__bar {
     fill: $light-grey;
     fill-opacity: 0;
-
-    transition: fill-opacity .5s ease-in-out;
+    transition: fill-opacity 0.5s ease-in-out;
 
     &--animate {
-      fill-opacity: .5;
+      fill-opacity: 0.5;
 
       animation: {
         name: weather-fog;
@@ -19,7 +18,7 @@
 
       @for $i from 1 through 7 {
         &:nth-child(#{$i}) {
-          animation-delay: .5s * $i;
+          animation-delay: 0.5s * $i;
         }
       }
     }
