--- a/src/scss/_Rain.scss
+++ b/src/scss/_Rain.scss
@@ -13,9 +13,9 @@
         timing-function: ease-in-out;
         iteration-count: infinite;
       }
-      
+
       &:nth-child(2) {
-        animation-delay: .9s;
+        animation-delay: 0.9s;
       }
 
       &:nth-child(3) {
@@ -29,10 +29,10 @@
 
     &--heavy {
       stroke: $blue;
-      animation-duration: .8s;
+      animation-duration: 0.8s;
 
       &:nth-child(2) {
-        animation-delay: .5s;
+        animation-delay: 0.5s;
       }
 
       &:nth-child(3) {
